# fastapi_mcp_server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  docker-compose.dev.yml  docker-compose.timescale.yml  docker-compose.yml  fastapi_mcp_server.md  openapi_temp.json  pyproject.toml  第一週任務細分計畫.md  第二週任務細分計畫.md
alembic/: env.py
alembic/versions/: e1f276e4d9ed_initial_migration.py
app/: __init__.py  main.py  main_backup.py
app/api/: advanced_statistics.py  machine_learning.py  monitoring.py  statistics.py  timeseries.py
app/core/: logging.py  mcp_config.py  settings.py
app/database/: base.py
app/middleware/: mcp_monitoring.py
app/models/: advanced_statistics.py  database.py  ml_models.py  statistics.py  timeseries.py
app/services/: advanced_statistics.py  cache.py  model_manager.py  statistics.py  timeseries.py
app/utils/: cache_decorators.py
docs/: 1st_CODE_REVIEW.md  README.md  第一週任務細分計畫.md  第二週代碼審查報告.md  轉換至Alembic遷移系統指引.md  部署指南.md
scripts/: init-timescaledb.sql  init_timescale.sql  run_tests.bat  run_tests.sh
tests/integration/: test_advanced_features.py  test_api_endpoints.py  test_mcp_integration.py
tests/unit/: test_statistics_service.py
